// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center and hasScrollbar: false 1`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px calc(100% - 40px),#0000 calc(100% - 8px)) alpha;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center and hasScrollbar: false 2`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px calc(100% - 40px),#0000 calc(100% - 8px)) alpha;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center and hasScrollbar: false 3`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px calc(100% - 40px),#0000 calc(100% - 8px)) alpha;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center and hasScrollbar: false 4`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px calc(100% - 40px),#0000 calc(100% - 8px)) alpha;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: top and hasScrollbar: true 1`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px calc(100% - 40px),#0000 calc(100% - 8px)) alpha;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: false, isPrevHidden: true, scrollIndicatorPosition: undefined and hasScrollbar: true 1`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#000 calc(100% - 40px), #0000 calc(100% - 8px)) alpha;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  visibility: hidden;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  visibility: inherit;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: hidden;
  }
  .action-next .action-button {
    visibility: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: true, isPrevHidden: false, scrollIndicatorPosition: undefined and hasScrollbar: true 1`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  mask: linear-gradient(90deg,#0000 8px,#000 40px) alpha;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  visibility: inherit;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  visibility: hidden;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: inherit;
  }
  .action-next .action-button {
    visibility: hidden;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isNextHidden: true, isPrevHidden: true, scrollIndicatorPosition: undefined and hasScrollbar: true 1`] = `
":host {
  display: block;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm));
}
.scroll-wrapper:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.trigger {
  position: absolute;
  inset: 0 auto;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  visibility: hidden;
}
.action-prev .action-button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  visibility: hidden;
}
.action-next .action-button {
  margin-right: 8px;
}
.action-button {
  --p-internal-button-scaling: 0.5;
  box-shadow: 0px 3px 8px rgba(0,0,0,.16);
}
@media(hover:hover) {
  .action-prev .action-button {
    visibility: hidden;
  }
  .action-next .action-button {
    visibility: hidden;
  }
}
"
`;
